:lipstick: Top align content to prevent jumping when the height changes

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: white;
 }
 
 .App-logo {
@@ -9,14 +11,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  margin-top: 5em;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
